--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment-timezone": "^0.5.45",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "npm": "^10.2.2",
     "oracledb": "https://github.com/oracle/node-oracledb/releases/download/v5.4.0/oracledb-src-5.4.0.tgz",
     "pg": "^8.7.3",
